--- a/lottery/pom.xml
+++ b/lottery/pom.xml
@@ -8,7 +8,7 @@
 	<name>lottery</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
-<!-- 		<dependency>
+	<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.10</version>
@@ -18,7 +18,7 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<version>3.2.8.RELEASE</version>
-		</dependency> -->
+		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
